syntax = "proto3";

package ubertool.trusted.api.v1;

option go_package = "ubertool-backend-trusted/api/gen/v1;ubertool_v1";


import "ubertool_trusted_backend/v1/user_service.proto";

option java_multiple_files = true;
option java_package = "com.ubertool.trusted.api.v1";
option java_outer_classname = "AuthServiceProto";

// Authentication service
service AuthService {
  // Validate invitation code before signup
  // No access_token required
  rpc ValidateInvite(ValidateInviteRequest) returns (ValidateInviteResponse);

  // Request to join organization
  // No access_token required
  rpc RequestToJoinOrganization(RequestToJoinRequest) returns (RequestToJoinResponse);

  // User register after invitation and signup an organization
  // No access_token required
  rpc UserSignup(SignupRequest) returns (SignupResponse);

  // Login with email and password
  // No access_token required
  rpc Login(LoginRequest) returns (LoginResponse);

  // Verify 2FA code
  // 2FA token required
  rpc Verify2FA(Verify2FARequest) returns (Verify2FAResponse);

  // Refresh access token
  // RefreshToken sent in metadata
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);

  // Logout
  // AccessToken required
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

// Validate invitation request
message ValidateInviteRequest {
  string invitation_code = 1;
  string email = 2;
}

// Validate invitation response
message ValidateInviteResponse {
  bool valid = 1;
  string message = 2;
  User user = 3;
}

// Login request
message LoginRequest {
  string email = 1;
  string password = 2;
}

// Login response
message LoginResponse {
  bool success = 1;
  string two_fa_token = 2;
  int64 expires_at = 3;
  string message = 4;
}

// 2FA verification request
// two_fa_token is in the request header
message Verify2FARequest {
  string two_fa_code = 1;
}

// 2FA verification response
message Verify2FAResponse {
  bool success = 1;
  string access_token = 2;
  string refresh_token = 3;
  User user = 4;
}

// Signup request
message SignupRequest {
  string invitation_code = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string password = 5;
}

// Signup response
message SignupResponse {
  bool success = 1;
  string message = 2;
}

// Refresh token request
message RefreshTokenRequest {
  // refresh_token sent in metadata
}

// Refresh token response
message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

// Logout request
message LogoutRequest {
}

// Logout response
message LogoutResponse {
  bool success = 1;
}

// Request to join request
message RequestToJoinRequest {
  int32 organization_id = 1;
  string name = 2;
  string email = 3;
  string message = 4;
}

// Request to join response
message RequestToJoinResponse {
  bool success = 1;
  string message = 2;
}

